# benchmark-markitdown-pymupdf

./: README.md  hello.py  pyproject.toml
.github/action/: run.yml
.github/workflows/: run.yml
result/: coolify.csv  github-action.csv  mac.csv  visualize.py
src/: config.py
src/normal/: benchmark_markitdown.py  benchmark_pymupdf.py
src/parallel/: benchmark_pymupdf.py  output_markitdown.txt  output_pdfminer.txt  output_pymupdf4llm.txt  with_markitdown.py  with_pdfminer.py  with_pymupdf.py  with_pymupdf4llm.py
src/serial/: output_markitdown.txt  output_pdfminer.txt  output_pymupdf.txt  with_markitdown.py  with_pdfminer.py  with_pymupdf.py  with_pymupdf4llm.py
