[project]
name = "benchmark-markitdown-pymupdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markitdown>=0.0.1a4",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pdfminer-six>=20240706",
    "pymupdf>=1.25.3",
    "pymupdf4llm>=0.0.17",
    "seaborn>=0.13.2",
]
